spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body {
     justify-content: center;
     text-transform: lowercase;
     margin: 0;
+    padding: 0;
+    width: 100%;
+    /* overflow-x: hidden; */
 }
 
 /* tokens. this is for you, jordan. thx. */
@@ -17,15 +20,16 @@ body {
     /* colors */
     --primary: rgb(255, 255, 255);
     --secondary: rgb(0, 0, 0);
-    --primary-faded: rgba(255, 255, 255, 0.4);
+    --primary-faded: rgba(120, 120, 120, 0.5);
 
     /* container sizes */
     --max-container-width: 1100px;
     --max-small-container-width: 700px;
 
-    /* container margins */
-    --margin-container: 10px;
-    --section-margins: 50px;
+    /* container spacing */
+    --container-margins: 12px;
+    --section-width: 95%;
+    --section-margins: 80px;
 
     /* font sizes */
     --p: 16px;
@@ -54,7 +58,7 @@ p.small { /* header bar text */
     font-size: var(--header-bar);
     margin-top: var(--p-top);
     margin-bottom: var(--p-bottom);
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 br {
@@ -77,51 +81,52 @@ h3 {
 
 .thumbnail {
     width: 100%;
-    height: 40vw;
-    max-height: 300px;
-    min-height: 400px;
+    height: 30vw;
+    max-height: 340px;
+    min-height: 250px;
     display: flex;
     overflow: hidden;
 }
 
 .thumbnail img {
     width: 100%;
-    height: 100%;
     object-fit: cover;
     object-position: center;
 }
 
 .section {
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    max-width: var(--max-container-width);
-    height: 100%;
-    margin: var(--section-margins);
+    padding-top: var(--section-margins);
+    padding-bottom: var(--section-margins);
 }
 
 .block { 
     display: flex;
     align-items: top;
-    flex-direction: column; /* column default */
+    flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+    max-width: var(--max-container-width);
     height: 100%;
+    width: var(--section-width);
 }
 
 #row {
     flex-direction: row;
 }
 
+#column {
+    flex-direction: column;
+}
+
 .container {
     display: flex;
     flex-direction: column;
+    margin: var(--container-margins);
     width: 100%;
-    margin-left: 10px;
-    margin-right: 10px;
-    height: 100%;
 }
 
 .header-bar {
@@ -135,6 +140,7 @@ h3 {
 
 .content {
     margin-bottom: 10px;
+        
 }
 
 .heading {
@@ -145,4 +151,14 @@ h3 {
 
 #info {
     max-width: 200px;
+}
+
+#light {
+    background-color: var(--primary);
+    color: var(--secondary);
+}
+
+#dark {
+    background-color: var(--secondary);
+    color: var(--primary);
 }
